@@ -1,3 +1,13 @@
+Thu Jul 13 11:52:53 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* gdb.base/sizeof.exp, gdb.base/sizeof.c: New files.  Compare GDB
+ 	and the compilers sizes.
+
+Wed Jul 12 18:14:29 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* gdb.base/exprs.exp: Test casts to a pointer including over and
+ 	underflow.
+
 2000-07-09  Nick Duffek  <nsd@redhat.com>
 
 	* gdb.c++/misc.cc (class ClassParam, class_param): Define.
